# wasm-gpu-canvas

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
.cargo/: config.toml
examples/: 01-particles.html  02-voronoi.html  03-cellular-automata.html  04-fractal-tree.html  05-flow-field.html  index.html
examples/js/: example-framework.js  fps-counter.js
src/: animation.rs  canvas-gpu.js  canvas2d.rs  lib.rs
www/: canvas-gpu.js  index.html  index.js
