[package]
name = "wasm-2dcanvas-gpu"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "GPU-accelerated 2D canvas rendering via WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WebGlTexture",
  "WebGlFramebuffer",
  "WebGlActiveInfo",
  "Performance",
  "PerformanceTiming",
  "MouseEvent"
] }
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.34"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true 